--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
            <a href="mailto:ojasvi.tripathi.cd.che22@itbhu.ac.in" target="_blank"><button type="button" id="b1">Mail Me &rarr;</button></a>
          </p>
        </div>
-             <button onclick="jsbutton()" class="alertbutton">Click Me</button>
+    <p class="palert"><button onclick="jsbutton()" class="alertbutton">Click Me</button></p>
        <script>
         function jsbutton() {
           alert("This website portfolio is created as a part of CSOC week0 assignment");
