--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
            </span><br><br>
            <a href="mailto:ojasvi.tripathi.cd.che22@itbhu.ac.in" target="_blank"><button type="button" id="b1">Mail Me &rarr;</button></a>
          </p>
-       </div><br><br><br>
+       </div>
+    <br><br><br><br><br><br>
     <button onclick="jsbutton()" class="alertbutton">Click Me</button>
        <script>
         function jsbutton() {
